[tool.poetry]
name = "dateparser-tw"
version = "3.0.1"
description = "Convert Chinese time expressions to corresponding time strings, supporting time points, time periods, and time intervals."
authors = ["Kamel Liao <kamelliaotw@gmail.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
arrow = ">=0.17.0"
loguru = ">=0.5.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.2"
pytest-flakes = "^4.0.5"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
